2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network.cpp|h:
	* downloader.cpp: Make HttpRequest::Send send async using tick calls. Fixes
	our media test #126 (it raises a download error event before the surface'
	loaded event otherwise).

2010-05-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* application.cpp: GetResource: add event handlers before calling Open, since
	Open might raise error events.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp: Readd code that got accidentally removed.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* network-curl.cpp|h: Implement a couple of TODOs I'd missed.

2010-05-25  Jeffrey Stedfast  <fejj@novell.com>

	* fonts.cpp (IsValidLang): Rewritten to be a bit more robust... I
	guess. Makes drt 245 pass.

	* uielement.cpp (ElementAdded): Always propagate inherited
	values. Partial fix for drt 245.

	* provider.cpp (InheritedPropertyValueProvider::GetPropertyValue):
	Removed some unnecessary branching.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: When marshalling events to the main thread, only do one
	event emission per tick call. This fixes a tick call ordering issue where
	an early event emission would also cause later events to be emitted since
	they'd get accumulated before the tick call was executed - which is
	problematic if the Surface' loaded event's tick call was added in between
	those event emissions, causing MediaElements to emit events before the
	Surface' Loaded event had been raised. Fixes a regression with
	our media test #113.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: Rename HttpRequestNode to something else, since there
	already is a HttpRequestNode in deployment.cpp.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp|h: MmsSource: don't touch http requests on the media thread.

2010-05-25  Rolf Bjarne Kvinge  <RKvinge@novell.com>
